Introduced prettier for code style Plugged in eslint for linting Fixed undo/redo in table preview Fixed issues with help modal translations Removed many unnecessary calls to useCallback Other minor fixes

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,7 +3,7 @@ $i_0: #ffffff;
 $i_10: #d9c9f1;
 $i_20: #bd9eed;
 $i_30: #9e74e9;
-$i_40: #7759FD;
+$i_40: #7759fd;
 $i_50: #5b2bda;
 $i_60: #3911ce;
 $i_70: #1900c0;
@@ -11,7 +11,7 @@ $i_80: #0700af;
 $i_90: #00089b;
 $i_100: #001287;
 
-$i_main: #5b2bda;
+$i_main: $i_50;
 $i_accent: $i_60;
 $i_faded: $i_40;
 $i_highlight: $i_30;
@@ -28,3 +28,4 @@ $i_text_light: #fff;
 $warning-color: #b00020;
 $warning-color_dark: #cf6679;
 $disabled-color: #eee;
+$disabled-color-dark: #222;
