--- a/src/styles/title-bar.scss
+++ b/src/styles/title-bar.scss
@@ -2,13 +2,14 @@
 
 .TitleBar {
   z-index: 99;
-  background: $i_main!important;
+  color: #aaa;
+  background: $i_main !important;
 
   .toolbar-dropdown.closed .toolbar-button .menu-label {
     color: white;
   }
 
   .list-item.selected {
-    background-color: $i_accent!important;
+    background-color: $i_accent !important;
   }
 }
