--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,12 +9,18 @@ strong {
   font-weight: bold;
 }
 
-i, em {
+i,
+em {
   font-style: italic;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: .3em 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0.3em 0;
 }
 
 h1 {
@@ -42,7 +48,8 @@ h6 {
 }
 
 kbd {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
+    'Courier New', monospace;
   padding: 0.2rem 0.4rem;
   font-size: 87.5%;
   color: #fff;
@@ -52,25 +59,26 @@ kbd {
 }
 
 p:not(:last-of-type) {
-  margin-bottom: .8em;
+  margin-bottom: 0.8em;
 }
 
-html, body, #root {
+html,
+body,
+#root {
   height: 100%;
   width: 100%;
 }
 
 body {
   background: white;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-  sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-  monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
-
