--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -1,6 +1,6 @@
 @import 'colors';
 
-$transition-duration: .3s;
+$transition-duration: 0.3s;
 
 .Modal {
   &__Overlay {
@@ -12,7 +12,7 @@ $transition-duration: .3s;
     z-index: 2;
     opacity: 0;
     transition: opacity $transition-duration;
-    background: rgba(0,0,0,.5)!important;
+    background: rgba(0, 0, 0, 0.5) !important;
     overflow-y: auto;
 
     &::-webkit-scrollbar {
@@ -43,7 +43,7 @@ $transition-duration: .3s;
     border-radius: 4px;
     min-width: 65vw;
     max-width: 85vw;
-    padding: .2em 1em 1.8em;
+    padding: 0.2em 1em 1.8em;
 
     p:first-child {
       margin-top: 1em;
@@ -67,6 +67,7 @@ $transition-duration: .3s;
 }
 
 // Vertical tabs color
-.rwt__tablist[aria-orientation="vertical"] .rwt__tab[aria-selected="true"]:after {
-  border-right: 3px solid $i_main!important;
+.rwt__tablist[aria-orientation='vertical']
+  .rwt__tab[aria-selected='true']:after {
+  border-right: 3px solid $i_main !important;
 }
