--- a/src/styles/preview-table.scss
+++ b/src/styles/preview-table.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   &::-webkit-scrollbar {
     width: 0;
   }
@@ -13,8 +14,9 @@ html, body {
     position: relative;
     width: 100%;
 
-    & > div:first-child, & > div:last-child {
-      grid-column: 1 / -1
+    & > div:first-child,
+    & > div:last-child {
+      grid-column: 1 / -1;
     }
   }
 
@@ -31,14 +33,13 @@ html, body {
   }
 
   &__ScrollCont {
-
   }
 
   &__Cell {
     height: 60px;
     display: flex;
     align-items: center;
-    padding: 0 .5em;
+    padding: 0 0.5em;
 
     &_header {
       justify-self: center;
